--- a/index.html
+++ b/index.html
@@ -392,8 +392,8 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">MIPA</div>
-            <p class="category">SMA Negri 1 Gebog</p>
-            <p>Mulai mendalami ilmu komputer di berbagai grup facebook.</p>
+            <p class="category">SMA Negeri 1 Gebog</p>
+            <p>Mulai mendalami ilmu komputer di berbagai grup Facebook.</p>
           </div>
         </div>
       </div>
@@ -409,7 +409,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Umum</div>
-            <p class="category">MTs Negri 1 Kudus</p>
+            <p class="category">MTs Negeri 1 Kudus</p>
             <p>Memulai kisah tanpa beban mempunyai pertemanan yang nyata dan pertama kali kenal Coding.</p>
           </div>
         </div>
