--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="card-body">
-                    <form action="https://formspree.io/kidevinfo73@gmail.com" method="POST">
+                    <form action="https://formspree.io/aramadhan594@gmail.com" method="POST">
                       <div class="p pb-3"><strong>Aku Menunggu... </strong></div>
                       <div class="row mb-3">
                         <div class="col">
