--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="cc-profile-image"><a href="#"><img src="images/1475504990553.jpg" alt="Image"/></a></div>
           <div class="h2 title">Muhammad Arif Ramadhani</div>
           <p class="category text-white">You can Call me Rama</p>
-          <p class="category text-white">Programmer</p>
+          <p class="category text-white">Programmer & Web Developer</p>
           <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
@@ -52,8 +52,8 @@
         <div class="container">
           <div class="button-container">
             
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="http://facebook.com/ariframadhan01" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a> 
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="" rel="tooltip" title="Follow me on GitHub"><i class="fa fa-github"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://web.facebook.com/arif.ramadhan0/" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a> 
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/ariframadhan01" rel="tooltip" title="Follow me on GitHub"><i class="fa fa-github"></i></a>
             <a class="btn btn-default btn-round btn-lg btn-icon" href="http://instagram.com/arf_ramadhan" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a>
           </div>
         </div>
@@ -69,8 +69,9 @@
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>Hello! I am Muhammad Arif Ramadhani you can call me Rama. Programmer and Web Developer.</p>
-            <P>Halo! Saya Muhammad Arif Ramadhani biasa dipanggil Rama. Programmer dan Web Developer.</p>
-            <p>CV ini dibuat untuk menapilkan Keahlian, Portofolio, Pengalaman dan Informasi kontak.</p>
+            <p>I love everything about technology especially being a Web Developer. I believe technology is the future of humanity. So, I will give my best to help
+                people not because of money, just because I'd love to! Feel free to ask me for help as well as hiring me.</p>
+            <p>This CV is created to showcase Skills, Portfolio, Experience and Contact Information.</p>
             </div>
         </div>
         <div class="col-lg-6 col-md-12">
