--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 </div></div>
     </div>
     <footer class="footer">
-      <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
+      <div class="container text-center"><a class="cc-facebook btn btn-link" href="https://www.facebook.com/arif.ramadhan0/"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-linkedin btn btn-link " href="https://www.linkedin.com/in/muhammad-arif-ramadhani-b1b024241/"><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a><a class="cc-github btn btn-link" href="https://github.com/ariframadhan01"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="https://www.instagram.com/arf_ramadhan/"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
       <div class="text-center text-muted">Muhammad Arif Ramadhani</div>
       <div class="text-center text-muted">
         <p>&copy; Creative CV. Made With Love<br>Design - <a class="credit" href="http://instagram.com/arf_ramadhan" target="_blank">Arif Ramadhan</a></p>
