--- a/index.html
+++ b/index.html
@@ -404,7 +404,29 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>Januari 2022 - April 2022</p>
+            <p>Juni 2022 - Januari 2023</p>
+            <div class="h5">Universitas Muria Kudus</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Asisten Dosen</div>
+            <p>
+              - Assisting lecturers in teaching, creating exam questions, and diagnosing exams/questions.
+              <br>
+              - Teaching younger students about courses such as Computer Network Programming Practice, Computer Network Programming Practice, and Basic Programming Practice.
+              <br>
+              - Helping lecturers develop teaching materials and assisting in their research activities.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>Januari 2022 - Juni 2022</p>
             <div class="h5">PT. Legitima Solusi Digital Indonesia</div>
           </div>
         </div>
@@ -412,11 +434,11 @@
           <div class="card-body">
             <div class="h5">Web Developer</div>
             <p>
-              - Create a company website profile that is useful for displaying a company profile so that buyers can get to know the company more deeply and introduce the services offered. The results of the website that I created can be seen at www.legitima-indonesia.com
+              - Creating a company profile website that is useful for displaying the company's services so that buyers can get to know the company better and introduce the services offered. The website that I created can be seen at www.legitima-indonesia.com
               <br>
-              - Make Responsive web design using figma and set the company website to be more responsive when accessed via mobile using CSS GRID
+              - Creating a responsive web design using Figma and optimizing the company website for better accessibility when accessed via mobile devices.
               <br>
-              -Creating a useful login feature so that the company can upload portfolios to the company website profile using PHP CRUD
+              - Creating a useful login feature so that the company can upload portfolios to the company website profile.
             </p>
           </div>
         </div>
@@ -434,7 +456,7 @@
           <div class="card-body">
             <div class="h5">Web Developer and Data Entry</div>
             <p>
-              - Create a website-based application that is useful for inputting community data such as NIK, KK, Head of Family, Address, etc
+              - Developing a web-based application that is useful for inputting community data such as NIK, KK, Head of Family, Address, etc.
               <br>
               - Entering Mijen village population data into the website application that I have created
               <br>
@@ -572,7 +594,7 @@
 </div></div>
     </div>
     <footer class="footer">
-      <div class="container text-center"><a class="cc-facebook btn btn-link" href="https://www.facebook.com/arif.ramadhan0/"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-linkedin btn btn-link " href="https://www.linkedin.com/in/muhammad-arif-ramadhani-b1b024241/"><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a><a class="cc-github btn btn-link" href="https://github.com/ariframadhan01"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="https://www.instagram.com/arf_ramadhan/"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
+      <div class="container text-center"><a class="cc-facebook btn btn-link" href="https://www.facebook.com/arif.ramadhan0/"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-linkedin btn btn-link " href="https://www.linkedin.com/in/muhammadariframadhani/"><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a><a class="cc-github btn btn-link" href="https://github.com/ariframadhan01"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="https://www.instagram.com/arf_ramadhan/"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
       <div class="text-center text-muted">Muhammad Arif Ramadhani</div>
       <div class="text-center text-muted">
         <p>&copy; Creative CV. Made With Love<br>Design - <a class="credit" href="http://instagram.com/arf_ramadhan" target="_blank">Arif Ramadhan</a></p>
