--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="section">
         <div class="container">
           <div class="button-container">
-            
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/muhammadariframadhani/" rel="tooltip" title="Follow me on Linkedin"><i class="fa fa-linkedin"></i></a>
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://web.facebook.com/arif.ramadhan0/" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a> 
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/ariframadhan01" rel="tooltip" title="Follow me on GitHub"><i class="fa fa-github"></i></a>
             <a class="btn btn-default btn-round btn-lg btn-icon" href="http://instagram.com/arf_ramadhan" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a>
@@ -112,7 +112,7 @@
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">HTML</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div><span class="progress-value">90%</span>
               </div>
             </div>
           </div>
@@ -128,7 +128,7 @@
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">JavaScript</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div><span class="progress-value">40%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div><span class="progress-value">95%</span>
               </div>
             </div>
           </div>
@@ -167,7 +167,7 @@
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">Adobe Photoshop</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div><span class="progress-value">90%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
               </div>
             </div>
           </div>
@@ -195,22 +195,6 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a>
-                  <figure class="cc-effect"><img src="images/porto1.png" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Calculator Application</div>
-                      <p>HTML 5, CSS 3 & PHP</p>
-                    </figcaption>
-                  </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a>
-                  <figure class="cc-effect"><img src="images/porto2.png" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Model-View-Controller Application</div>
-                      <p>HTML 5, CSS 3, JavaScript & PHP</p>
-                    </figcaption>
-                  </figure></a></div>
-            </div>
-            <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a>
                   <figure class="cc-effect"><img src="images/porto3.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">Aplikasi Penerimaan Mahasiswa Baru</div>
@@ -234,26 +218,26 @@
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a>
-                  <figure class="cc-effect"><img src="images/porto6.png" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Tugas Akhir Membuat Website Bootcamp Dicoding</div>
-                      <p>HTML 5, JavaScript & CSS 3</p>
-                    </figcaption>
-                  </figure></a></div>
-            </div>
-            <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a>
                   <figure class="cc-effect"><img src="images/porto7.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">Bookshelf Apllication Bootcamp Dicoding</div>
                       <p>HTML 5, JavaScript & CSS 3</p>
                     </figcaption>
                   </figure></a></div>
+            </div>
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a>
+                <figure class="cc-effect"><img src="images/porto6.png" alt="Image"/>
+                  <figcaption>
+                    <div class="h4">Tugas Akhir Membuat Website Bootcamp Dicoding</div>
+                    <p>HTML 5, JavaScript & CSS 3</p>
+                  </figcaption>
+                </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a>
                   <figure class="cc-effect"><img src="images/porto8.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">Customer Service Application</div>
-                      <p>HTML 5, CSS 3, JavaScript, PHP, & Database MySQL</p>
+                      <p>HTML 5, CSS 3, JavaScript, PHP, Laravel & Database MySQL</p>
                     </figcaption>
                   </figure></a></div>
             </div>
@@ -262,14 +246,14 @@
                   <figure class="cc-effect"><img src="images/porto9.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">Aplikasi Admin Penjualan</div>
-                      <p>HTML 5, CSS 3, JavaScript, PHP, & Database MySQL</p>
+                      <p>HTML 5, CSS 3, JavaScript, PHP, Laravel & Database MySQL</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a>
                   <figure class="cc-effect"><img src="images/porto10.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">Website Company Profile Legitima</div>
-                      <p>HTML 5, CSS3, CSS GRID, PHP, & Database MySQL</p>
+                      <p>HTML 5, CSS 3, PHP, & Database MySQL</p>
                     </figcaption>
                   </figure></a></div>
             </div>
@@ -404,7 +388,7 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>Juni 2022 - Januari 2023</p>
+            <p>Juny 2022 - January 2023</p>
             <div class="h5">Universitas Muria Kudus</div>
           </div>
         </div>
@@ -426,7 +410,7 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>Januari 2022 - Juni 2022</p>
+            <p>January 2022 - Juny 2022</p>
             <div class="h5">PT. Legitima Solusi Digital Indonesia</div>
           </div>
         </div>
