--- a/index.html
+++ b/index.html
@@ -388,6 +388,28 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
+            <p>Feb 2023 - July 2023</p>
+            <div class="h5">Bangkit Academy led by Google, Tokopedia, Gojek, & Traveloka</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Cloud Computing</div>
+            <p>
+              - I successfully graduated in the top 10% of the total participants and received the title "Distinction Graduate". 
+              <br>
+              - Bangkit is a Google-led career readiness program held in collaboration with Gojek, Tokopedia, and Traveloka. This industry-led, interdisciplinary, and immersive program is designed to produce high-caliber technical talents for world-class Indonesian technology companies and startups.
+              <br>
+              - Collaborated with other team members to develop an Android application named "Fruitarians" which is useful for detecting the freshness of fruit in order to help consumers choose the right fruit, so as to improve their health and quality of life.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
             <p>Juny 2022 - January 2023</p>
             <div class="h5">Universitas Muria Kudus</div>
           </div>
