--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="cc-profile-image"><a href="#"><img src="images/Ram.jpeg" alt="Image"/></a></div>
           <div class="h2 title">Muhammad Arif Ramadhani</div>
           <p class="category text-white">You can Call me Rama</p>
-          <p class="category text-white">Programmer & Web Developer</p>
+          <p class="category text-white">Programmer | Cloud Engineer | IT Support</p>
           <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="images/CV_Muhammad Arif Ramadhani.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
@@ -68,8 +68,8 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Muhammad Arif Ramadhani you can call me Rama. Programmer and Web Developer.</p>
-            <p>I love everything about technology especially being a Web Developer. I believe technology is the future of humanity. So, I will give my best to help
+            <p>Hello! I am Muhammad Arif Ramadhani you can call me Rama. Programmer and Cloud Engineer.</p>
+            <p>I love everything about technology. I believe technology is the future of humanity. So, I will give my best to help
                 people not because of money, just because I'd love to! Feel free to ask me for help as well as hiring me.</p>
             <p>This CV is created to showcase Skills, Portfolio, Experience and Contact Information.</p>
             </div>
@@ -77,24 +77,20 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">Basic Information</div>
-            <div class="row">
-              <div class="col-sm-4"><strong class="text-uppercase">Umur		:</strong></div>
-              <div class="col-sm-8">20</div>
-            </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email	:</strong></div>
               <div class="col-sm-8">aramadhan594@gmail.com</div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Telepon	:</strong></div>
-              <div class="col-sm-8">+62 852-2784-2471</div>
+              <div class="col-sm-4"><strong class="text-uppercase">Linkedin	:</strong></div>
+              <div class="col-sm-8">linkedin.com/in/muhammadariframadhani/</div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Alamat	:</strong></div>
+              <div class="col-sm-4"><strong class="text-uppercase">Address	:</strong></div>
               <div class="col-sm-8">Kudus - Indonesia</div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Bahasa	:</strong></div>
+              <div class="col-sm-4"><strong class="text-uppercase">Language	:</strong></div>
               <div class="col-sm-8">Indonesia, English</div>
             </div>
           </div>
@@ -110,64 +106,64 @@
       <div class="card-body">
         <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">HTML</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Laravel</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div><span class="progress-value">90%</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">C++</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Express.js</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div><span class="progress-value">85%</span>
               </div>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">JavaScript</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Codeigniter</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div><span class="progress-value">95%</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">PHP</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Hapi.js</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div><span class="progress-value">90%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div><span class="progress-value">85%</span>
               </div>
             </div>
           </div>
         </div>
         <div class="row">
             <div class="col-md-6">
-              <div class="progress-container progress-primary"><span class="progress-badge">Java</span>
+              <div class="progress-container progress-primary"><span class="progress-badge">SQL Server</span>
                 <div class="progress">
-                  <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
+                  <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
                 </div>
               </div>
             </div>
             <div class="col-md-6">
-              <div class="progress-container progress-primary"><span class="progress-badge">CSS</span>
+              <div class="progress-container progress-primary"><span class="progress-badge">Mysql</span>
                 <div class="progress">
-                  <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div><span class="progress-value">40%</span>
+                  <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div><span class="progress-value">90%</span>
                 </div>
               </div>
             </div>
           </div>
         <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Adobe Premiere Pro</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Amazon Web Services</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Adobe Photoshop</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Google Cloud Platform</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div><span class="progress-value">85%</span>
               </div>
             </div>
           </div>
@@ -265,17 +261,65 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a">
-                  <figure class="cc-effect"><img src="images/sertifikat1.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/sertifikatgcdl.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Dicoding</div>
-                      <p>Belajar Dasar Pemrograman Web</p>
+                      <div class="h4">Google Cloud Cetified</div>
+                      <p>Cloud Digital Leader</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a">
-                  <figure class="cc-effect"><img src="images/sertifikat2.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/sertifikatfacil.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Google Cloud & Dicoding</div>  
+                      <p>Facilitator Google Arcade</p>
+                    </figcaption>
+                  </figure></a></div>
+            </div>
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a">
+                  <figure class="cc-effect"><img src="images/sertifikatbangkit.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Bangkit Academy</div>  
+                      <p>Distinction Graduate - Cloud Computing</p>
+                    </figcaption>
+                  </figure></a></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a">
+                  <figure class="cc-effect"><img src="images/sertifikatmentor.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Bangkit Academy</div>  
+                      <p>Mentor - Cloud Computing</p>
+                    </figcaption>
+                  </figure></a></div>
+            </div>
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a">
+                  <figure class="cc-effect"><img src="images/sertifikatcloudengineer.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">Dicoding</div>  
-                      <p>Belajar Membuat Front-End Web Untuk Pemula</p>
+                      <p>Menjadi Google Cloud Engineer</p>
+                    </figcaption>
+                  </figure></a></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a">
+                  <figure class="cc-effect"><img src="images/sertifikatpenerapanml.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Dicoding</div>  
+                      <p>Belajar Penerapan Machine Learning dengan Google Cloud</p>
+                    </figcaption>
+                  </figure></a></div>
+            </div>
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a">
+                  <figure class="cc-effect"><img src="images/sertifikat_cloudarc.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Dicoding</div>  
+                      <p>Menjadi Google Cloud Architect</p>
+                    </figcaption>
+                  </figure></a></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a">
+                  <figure class="cc-effect"><img src="images/sertifikat_backend.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Dicoding</div>  
+                      <p>Belajar Membuat Aplikasi Back-End untuk Pemula dengan Google Cloud</p>
                     </figcaption>
                   </figure></a></div>
             </div>
@@ -388,6 +432,86 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
+            <p>May 2024 - Jul 2024</p>
+            <div class="h5">Google Cloud & Dicoding</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Facilitator Google Cloud Arcade 2024</div>
+            <p>
+              - As a Facilitator, I managed a group of nearly 125 participants. I provided tutorials, guidance, and tips to help them complete badges quickly and accurately. Together, the participants completed a total of 463 badges.
+              <br>
+              - Support participants to successfully complete the program and reach their milestones, aiming for graduation in the Cloud Computing and Artificial Intelligence learning tracks.
+              <br>
+              - Teaching how to deploy applications using Google Cloud Platform, from setting up Cloud Storage to store important data, to utilizing Load Balancing and High Availability Servers for optimal performance.              
+              <br>
+              - Help participants overcome challenges or problems they face while working on the Google Cloud Skills Boost course.
+              <br>
+              - Attend weekly meetings to discuss progress and receive guidance with the Dicoding team.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>Feb 2024 - Jul 2024</p>
+            <div class="h5">Bangkit Academy led by Google, Tokopedia, Gojek, & Traveloka</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Mentor Cloud Computing</div>
+            <p>
+              - Monitoring a Cloud Computing learning path group with 25 mentees to share knowledge, provide mentorship, personal support during their learning journey and 96% of them have successfully graduated.
+              <br>
+              - Leading 20 weekly consultations to provide mentees with reminders, share experiences, and offer tips and tricks to successfully achieve Distinction Graduate.              
+              <br>
+              - Facilitating study groups and providing 1-on-1 sessions for mentees who are lagging behind.
+              <br>
+              - Provide guidance when cohort members face problems during Bangkit Academy activities and offer solutions for issues they encounter in the courses provided by the Bangkit team.
+              <br>
+              - Become a teaching assistant in ILT Cloud Computing and ILT Softskills activities led by instructors.
+              <br>
+              - Reviewing mentees logbooks of their activities and also correcting final reports on the Kampus Merdeka website.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>Nov 2023 - May 2024</p>
+            <div class="h5">PT. Kanindo Makmur Jaya</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Web Developer</div>
+            <p>
+              - Develop a comprehensive CRUD application for inventory management utilizing CodeIgniter3 and SQL Server. 
+              <br>
+              - Implement PDF data printing functionality using DomPDF and facilitate data conversion to Excel format with PHPSpreadsheet.
+              <br>
+              - Integrate interactive data visualization features for inbound and outbound transactions, allowing for filtering by year and month using Chart.js.
+              <br>
+              - Enhance user experience by implementing sweet alert validations for data input.
+              <br>
+              - Incorporate QR code generation capabilities using the Endroid library for efficient data tracking and management.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
             <p>Feb 2023 - July 2023</p>
             <div class="h5">Bangkit Academy led by Google, Tokopedia, Gojek, & Traveloka</div>
           </div>
@@ -482,7 +606,7 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2019 - Sekarang</p>
+            <p>2019 - 2023</p>
             <div class="h5">Mahasiswa</div>
           </div>
         </div>
